<resources>
    <string name="app_name">Newser</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name = "dbname_users">user</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="field_username">username</string>
    <string name="confirm_password_dialog">Confirm Password</string>
</resources>
